# mtrick

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  test.py
src/mtrick/: __init__.py  dashboard.py  tracker.py
src/mtrick/static/: index.html
